<resources>
    <string name="app_name">TF Quiz</string>
    <string name="score">Score: 0</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="pre_button">Perv</string>
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer_button">Show Answer!</string>
    <string name="warning_text">Are you sure you want to do this ?</string>

    <string name="correct_Toast">Correct!</string>
    <string name="incorrect_Toast">Incorrect!</string>
    <string name="judgment_toast">Cheating is wrong!</string>


    <string name="question_australia">Canberra is the captail of Austrlia.</string>
    <string name="question_oceans">The Pacific Ocean is the larger than Atlantic Ocean.</string>
    <string name="question_midest">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

</resources>
